build(deps): Bump Structurizr to latest version (#51)